--- a/package.json
+++ b/package.json
@@ -1,20 +1,20 @@
 {
-    "name": "casper",
-    "description": "The default personal blogging theme for Ghost. Beautiful, minimal and responsive.",
-    "demo": "https://demo.ghost.io",
+    "name": "caspter-budjb",
+    "description": "Fork of the Casper theme for budjb.com.",
+    "demo": "https://budjb.com",
     "version": "2.1.0",
     "engines": {
         "ghost": ">=1.2.0"
     },
-    "license": "MIT",
+    "license": "Apache 2",
     "screenshots": {
         "desktop": "assets/screenshot-desktop.jpg",
         "mobile": "assets/screenshot-mobile.jpg"
     },
     "author": {
-        "name": "Ghost Foundation",
-        "email": "hello@ghost.org",
-        "url": "https://ghost.org"
+        "name": "Bud Byrd",
+        "email": "bud.byrd@gmail.com",
+        "url": "https://budjb.com"
     },
     "gpm": {
         "type": "theme",
@@ -29,10 +29,10 @@
     ],
     "repository": {
         "type": "git",
-        "url": "https://github.com/TryGhost/Casper.git"
+        "url": "https://github.com/budjb/Casper-BudJB"
     },
-    "bugs": "https://github.com/TryGhost/Casper/issues",
-    "contributors": "https://github.com/TryGhost/Casper/graphs/contributors",
+    "bugs": "https://github.com/budjb/Casper-BudJB/issues",
+    "contributors": "https://github.com/budjb/Casper-BudJB/graphs/contributors",
     "devDependencies": {
         "autoprefixer": "6.3.6",
         "cssnano": "3.7.1",
